# telekinesis-urdfs

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: develop.yml  release.yml  verify.yml
docs/: index.md  loader.md  utils.md
docs/hooks/: generate_registry.py
docs/styles/: mkdocstrings-spacing.css
examples/: robot_loader.py  robotiq_2f_85_loader.py  tool_loader.py  ur10e_loader.py
src/synapse_robot_data/loaders/robots/: _base_loader.py  _universal_robots_loader.py  loader.py
src/synapse_robot_data/models/example-robot-data/robots/fanuc/lrmate200i_description/: CHANGELOG.rst
src/synapse_robot_data/models/example-robot-data/robots/fanuc/m900ib_description/: CHANGELOG.rst
src/synapse_robot_data/models/example-robot-data/robots/fanuc/r1000ia_description/: package.xml
src/synapse_robot_data/models/example-robot-data/robots/husky_description/urdf/: clearpathHusky.urdf
src/synapse_robot_data/models/example-robot-data/robots/motoman/gp165r_description/: package.xml
src/synapse_robot_data/models/example-robot-data/robots/motoman/gp165r_description/launch/: robot_state_visualize_gp165r.launch  robot_state_visualize_gp165r_equipped.launch  test_gp165r_equipped.launch
src/synapse_robot_data/models/example-robot-data/robots/motoman/gp165r_description/test/: launch_test_gp165r.xml
src/synapse_robot_data/models/example-robot-data/robots/motoman/gp165r_description/urdf/: gp165r_macro.xacro  readme.txt
src/synapse_robot_data/models/example-robot-data/robots/unitree/g1_description/: dex3_1_l.urdf
src/synapse_robot_data/models/example-robot-data/robots/universal_robots/urdf/: ur10e_factory_calibration.urdf  ur15.urdf
src/synapse_robot_data/models/example-robot-data/tools/piab/meshes/: PCOE.U3.M01.E1.R111PD.X.C.E.XXX v1.fbx
src/telekinesis_urdfs/: __init__.py  abb.py  agibot.py  agility_robotics.py  allegro_hand.py  anymal_b.py  anymal_c.py  bitcraze.py  boston_dynamics.py  custom_mobile_robots.py  fanuc.py  franka_robotics.py  google.py  hector.py  husky.py  kuka.py  loader.py  motoman.py  neura_robotics.py  onrobot.py  pal_robotics.py  robotiq.py  schunk.py  simple_humanoid.py  unitree.py  universal_robots.py  utils.py
src/telekinesis_urdfs/models/example-robot-data/robots/: database.yaml
src/telekinesis_urdfs/models/example-robot-data/robots/bitcraze/crazyflie_description/: cf2p.urdf  cf2x.urdf  racer.urdf
src/telekinesis_urdfs/models/example-robot-data/robots/boston_dynamics/spot_base_description/: spot.urdf
src/telekinesis_urdfs/models/example-robot-data/robots/boston_dynamics/spot_with_arm_description/: spot_with_arm.urdf
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/cr35ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/cr7ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/crx10ia_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/lrmate200i_description/: package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/lrmate200ib_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/lrmate200ic_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/lrmate200id_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m10ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m16ib_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m20ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m20ib_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m430ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m6ib_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m710ic_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/fanuc/m900ia_description/: CHANGELOG.rst  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/motoman/gp25_description/: CMakeLists.txt  package.xml
src/telekinesis_urdfs/models/example-robot-data/robots/motoman/gp25_description/config/: opw_parameters_gp25.yaml  opw_parameters_gp25_12.yaml
src/telekinesis_urdfs/models/example-robot-data/robots/motoman/gp25_description/launch/: load_gp25.launch  load_gp25_12.launch  robot_interface_streaming_gp25.launch  robot_state_visualize_gp25.launch  robot_state_visualize_gp25_12.launch  test_gp25.launch
src/telekinesis_urdfs/models/example-robot-data/robots/motoman/gp25_description/test/: roslaunch_test_gp25.xml  roslaunch_test_gp25_12.xml
src/telekinesis_urdfs/models/example-robot-data/robots/motoman/gp25_description/urdf/: gp25.xacro  gp25_12.xacro  gp25_12_macro.xacro  gp25_macro.xacro
src/telekinesis_urdfs/models/example-robot-data/tools/: database.yaml
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/: README.md
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/egp_description/: CMakeLists.txt  package.xml
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/egp_description/config/: robot_model.rviz
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/egp_description/launch/: display_rviz.launch  egp.launch  load_egplaunch
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/egp_description/meshes/: egp_base.dae  egp_trans_1.dae  egp_trans_2.dae
src/telekinesis_urdfs/models/example-robot-data/tools/schunk/egp_description/urdf/: egp.transmission.xacro  egp.urdf  egp.xacro  egp_base_link.urdf.xacro  egp_base_link.xacro  egp_fingers_link.urdf.xacro  egp_fingers_link.xacro
(+440 files in other folders)
