[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "telekinesis-urdfs"
version = "0.1.0"
description = "Robot and tool model assets and Python loaders for Telekinesis."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Telekinesis", email = "aiswarya.menon@telekinesis.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pylint>=4.0.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocstrings[python]>=0.25,<1",
    "mkdocs-awesome-pages-plugin>=2,<3",
]

[project.urls]
Documentation = "https://docs.telekinesis.ai"
Repository = "https://github.com/telekinesis-ai/telekinesis-urdfs"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
telekinesis_urdfs = ["models/**/*"]

[tool.ruff]
exclude = ["src/telekinesis_urdfs/models"]

[tool.pylint.main]
ignore-paths = ["src/telekinesis_urdfs/models"]

[tool.pylint.format]
max-line-length = 80

[tool.pylint.design]
max-attributes = 10

[tool.pylint.messages_control]
disable = ["duplicate-code"]
