<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_gp165r_support</name>
  <version>0.1.0</version>
  <description>
    <p>ROS-Industrial support for the Motoman GP165R (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman GP165R series of manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>GP165R - Not-Equipped - Default</li>
      <li>GP165R - Equipped</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in the <em>YASKAWA MOTOMAN-GP165R,GP200R INSTRUCTIONS (HW1484396)</em>
      version <em>186044-1CD, rev 3</em>.
    </p>
    <p>
      This model comes in two versions 'Not-equipped' and 'Equipped'. The
      equipped version has reduced motion range to account for restrictions
      from extra hardware and cables routed outside of the robot.
      The 'Equipped' version has a reduce payload of 150 kg and lower
      allowable moment and inertia for the wrist joints. Please refer to the
      manual for further details.
    </p>
    <p>
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Eric Marcil</author>
  <maintainer email="eric.marcil@motoman.com">Eric Marcil</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_gp165r_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>motoman_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
