<package format="2">
  <name>egp_description</name>
  <version>0.0.0</version>
  <description>URDF Description package for eug50_version_2</description>
  <author>Jinbao Xiong</author>
  <author>Fabian Reinwald</author>
  <maintainer email="stefan.scherzinger@de.schunk.com">Stefan Scherzinger</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  <!-- The export tag contains other, unspecified, tags -->
  </export>
</package>
